# DevRustPilot

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  main.yml
release/app/: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/main/: App.tsx  Home.tsx  NavBar.tsx  main.css  main.ts  main.tsx  menu.ts  preload.ts  settingsManager.ts
src/renderer/: App.tsx  Header.tsx  Settings.tsx  SideBar.tsx  SideBarItem.tsx  UTFConverter.tsx  WSL.tsx  index.ejs  preload.d.ts
src/renderer/alerts/: Alert.tsx  AlertReducer.ts
src/renderer/components/: CenteredBackground.tsx  Input.tsx  PrimaryButton.tsx
src/renderer/constants/: Database.ts  SettingsConstants.ts
src/renderer/converter/: UTFConverter.tsx  UTFConverterSlice.ts
src/renderer/docker/: DockerHistoryItem.ts  DockerSlice.ts  HistoryDocker.tsx  ImageInspectView.tsx  ImageModel.ts  ImageView.tsx  PullResponse.ts  docker.css
src/renderer/generate/: Clipboard.tsx  GenButton.tsx  IDs.tsx  Person.tsx  PersonSlice.ts
src/renderer/jwt/: JWTReducer.ts  JsonViewer.tsx
src/renderer/linuxgui/: NativeGUI.tsx  NativeGUISlice.ts
src/renderer/modals/: AddGUIModal.tsx  AppModal.tsx  Modal.tsx  ModalSlice.ts  SimpleModal.tsx  UpdateGUIModal.tsx  UpdateModal.tsx
src/renderer/models/: JSONWebToken.ts  Note.ts  Tag.ts
src/renderer/notes/: LinkType.tsx  Links.tsx  NoteSelector.tsx  Notes.tsx  NotesModal.tsx  TagModal.tsx  Tags.tsx
src/renderer/store/: commonSlice.ts  notesSlice.ts  (+1 more)
(+1 files in other folders)
