[package]
name = "electron-utils"
version = "1.6.5"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.91"
serde = { version = "1.0.163", features = ["derive"] }
tauri = { version = "1.3.0", features = ["clipboard-all", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "path-all", "shell-all"] }
reqwest = {version = "0.11.18", features = ["json", "blocking"] }
jsonwebtoken = "8.3.0"
[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"
features = ["sqlite"] # or "postgres", or "mysql"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
